frontend_tests/negative/builtin_min_arity/go.mod
module example.com/renvotests/negative/builtin_min_arity

go 1.25
